# pr-assistant

./: .pr-assistant-test.json  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pr_assistant/: agent.py  codebase.py  config.py  github_client.py  logger.py  main.py  prompts.py  rate_limiter.py
tests/: conftest.py  test_agent.py  test_cli.py  test_codebase.py  test_config.py  test_github_client.py  test_rate_limiter.py  test_security.py
